# gliner_eval

./: .gitignore  README.md  config.yaml  config_multitacred_test.yaml  generate_report.py  multilingual_benchmarks.md  pyproject.toml  run_benchmark.py
src/: config.py
src/datasets/: __init__.py  base.py  crossre.py  docred.py  fewrel.py  multitacred.py
src/evaluation/: __init__.py  matching.py  metrics.py  report.py
src/models/: __init__.py  base.py  gliner2_model.py  gliner_model.py  ollama_model.py  openai_model.py
